# f1tenth_planning

./: pyproject.toml  requirements.txt
examples/: nls_example.py  pysindy_control_test.py
examples/control/: dynamic_ap_mppi.py  dynamic_mpc.py  dynamic_mppi.py  kinematic_mpc.py  lqr.py  nonlinear_dmpc.py  nonlinear_kmpc.py  pure_pursuit.py  sit_lmpc.py  stanley.py  trajectory_log.csv
examples/ros_wrappers/: control_ros_wrapper.py  new_map.csv  ros_map.csv  rotated_safe_slalom.csv
f1tenth_planning/: __init__.py
f1tenth_planning/control/: __init__.py  controller.py  discretizers.py  dynamics_model.py  mpc_solver.py
f1tenth_planning/control/config/: __init__.py  controller_config.py  dynamics_config.py  model_config.py  solver_config.py
f1tenth_planning/control/controllers/LTV_mpc/: LTV_mpc.py
f1tenth_planning/control/controllers/kinematic_mpc/: kinematic_mpc.py
f1tenth_planning/control/controllers/lmpc/: __init__.py  base.py  components.py  manager.py
f1tenth_planning/control/controllers/lqr/: lqr.py
f1tenth_planning/control/controllers/mpc/: mpc.py
f1tenth_planning/control/controllers/mpc/LTV_mpc/: LTV_kinematic_mpc.py
f1tenth_planning/control/controllers/mpc/ap_mppi/: dynamic_ap_mppi.py
f1tenth_planning/control/controllers/mpc/mppi/: dynamic_mppi.py  dynamic_mppi_incline.py
f1tenth_planning/control/controllers/mpc/nonlinear_mpc/: nonlinear_dmpc.py  nonlinear_kmpc.py
f1tenth_planning/control/controllers/mppi/: dynamic_mppi.py  mppi.py
f1tenth_planning/control/controllers/nonlinear_mpc/: nonlinear_dmpc.py  nonlinear_kmpc.py  nonlinear_mpc.py
f1tenth_planning/control/controllers/pure_pursuit/: pure_pursuit.py
f1tenth_planning/control/controllers/stanley/: stanley.py
f1tenth_planning/control/dynamics_models/: dynamic_model.py  kinematic_model.py
f1tenth_planning/control/solvers/: LTV_mpc_solver.py  __init__.py  ap_mppi_solver.py  mppi_solver.py  nonlinear_mpc_solver.py  safe_mppi_solver.py
f1tenth_planning/estimation/: __init__.py
f1tenth_planning/estimation/estimators/parameter_estimators/: paramter_estimator.py
f1tenth_planning/utils/: utils.py
(+1 files in other folders)
