[project]
name = "f1tenth-planning"
version = "0.1.1"
description = "F1TENTH Motion Planning Library"
authors = [
    { name = "Hongrui Zheng" },
    { name = "Renukanandan Tumu" },
    { name = "Luigi Berducci" },
    { name = "Ahmad Amine" },
]
requires-python = ">=3.9,<=3.13"
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Hongrui Zheng" }]
dependencies = [
    "cvxpy",
    "osqp",
    "kiwisolver",
    "scs",
    "llvmlite",
    "numba",
    "numpy",
    "qdldl",
    "pyyaml",
    "f1tenth_gym",
    "jax[cuda13]>=0.4.30",
    "casadi>=3.7.2",
]

[project.urls]
Homepage = "https://f1tenth.org"
Repository = "https://github.com/f1tenth/f1tenth_planning"
Documentation = "https://f1tenth-gym.readthedocs.io/en/latest/"

[tool.uv.sources]
f1tenth_gym = { git = "https://github.com/f1tenth/f1tenth_gym.git", branch = "dev-dynamics" }

[tool.hatchling.build.targets.wheel]
packages = ["f1tenth_planning"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
